[gd_scene load_steps=4 format=3 uid="uid://cfjwumyg8f7db"]

[ext_resource type="Script" uid="uid://bw34rhrw4moo0" path="res://scripts/settings.gd" id="1_r6d6q"]
[ext_resource type="FontFile" uid="uid://5j2ek2uxqjqv" path="res://art/Pixelpurl-0vBPP.ttf" id="2_6wm04"]
[ext_resource type="PackedScene" uid="uid://rdb4unyxmx3c" path="res://scenes/volume.tscn" id="3_6wm04"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_r6d6q")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21911496, 0.30634332, 0.18840256, 1)

[node name="Resume" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = 191.0
offset_right = 132.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6wm04")
theme_override_font_sizes/font_size = 100
text = "RESUME"

[node name="Main Menu Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -185.0
offset_top = -305.0
offset_right = 185.0
offset_bottom = -211.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_6wm04")
theme_override_font_sizes/font_size = 100
text = "MAIN MENU"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 53.000004
offset_top = -205.0
offset_right = 253.0
offset_bottom = -95.0
grow_vertical = 2
scale = Vector2(3, 3)

[node name="MasterLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_6wm04")
text = "Master Volume"

[node name="MasterVolumeSlider" parent="VBoxContainer" instance=ExtResource("3_6wm04")]
layout_mode = 2
value = 1.0
bus_name = "Master"

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_6wm04")
text = "Music Volume"

[node name="MusicVolumeSlider" parent="VBoxContainer" instance=ExtResource("3_6wm04")]
layout_mode = 2
value = 1.0
bus_name = "Music"

[node name="SFX Volume" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_6wm04")
text = "SFX Volume"

[node name="SFXVolume" parent="VBoxContainer" instance=ExtResource("3_6wm04")]
layout_mode = 2
value = 1.0
bus_name = "SFX"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Resume" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Main Menu Button" to="." method="_on_main_menu_button_pressed"]
